RESOLVED FIXED278576
Regression(278911@main) Crash under AuxiliaryProcessProxy::shutDownProcess()
https://bugs.webkit.org/show_bug.cgi?id=278576
Summary Regression(278911@main) Crash under AuxiliaryProcessProxy::shutDownProcess()
Chris Dumez
Reported 2024-08-23 13:42:25 PDT
Crash under AuxiliaryProcessProxy::shutDownProcess() since 278911@main: ``` 6 IPC::Connection::uniqueID() const ==> 6 WebKit::AuxiliaryProcessProxy::shutDownProcess() <== 6 WebKit::WebProcessProxy::shutDown() 5 WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch(WebKit::ProcessTerminationReason) | 5 WebKit::WebProcessProxy::didClose(IPC::Connection&) | 5 IPC::Connection::dispatchDidCloseAndInvalidate()::$_0::operator()() const | 5 WTF::Detail::CallableWrapper<IPC::Connection::dispatchDidCloseAndInvalidate()::$_0, void>::call() | 5 WTF::Function<void ()>::operator()() const | 5 WTF::RunLoop::performWork() | 5 WTF::RunLoop::performWork(void*) ```
Attachments
Chris Dumez
Comment 1 2024-08-23 13:42:36 PDT
Chris Dumez
Comment 2 2024-08-23 13:44:34 PDT
EWS
Comment 3 2024-08-23 16:14:45 PDT
Committed 282680@main (9a40e4dc60a5): <https://commits.webkit.org/282680@main> Reviewed commits have been landed. Closing PR #32644 and removing active labels.
EWS
Comment 4 2024-08-26 08:37:36 PDT
Committed 280938.272@safari-7619-branch (e52239ab9142): <https://commits.webkit.org/280938.272@safari-7619-branch> Reviewed commits have been landed. Closing PR #1655 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.