Regression(278911@main) Crash under AuxiliaryProcessProxy::shutDownProcess() https://bugs.webkit.org/show_bug.cgi?id=278576 rdar://134235519

Reviewed by Charlie Wolfe and Sihui Liu.

Make sure we use the `connection` stack variable instead of `m_connection`
as it might get cleared out.

* Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::shutDownProcess):

Canonical link: https://commits.webkit.org/282680@main